--- a/blocks/search/block.css
+++ b/blocks/search/block.css
@@ -1,1 +1,1 @@
-.wp-block-search__inside-wrapper.has-dropdown{-ms-flex-wrap:wrap;flex-wrap:wrap}.wp-block-search__select{-webkit-margin-end:0.5em;margin-inline-end:0.5em}
+.wp-block-search__inside-wrapper.has-dropdown{-ms-flex-wrap:wrap;flex-wrap:wrap}.wp-block-search__inside-wrapper.has-dropdown .wp-block-search__select{margin:0;-webkit-margin-end:0.5em;margin-inline-end:0.5em}.wp-block-search__inside-wrapper.has-dropdown .wp-block-search__input{width:auto}
